@@ -1,6 +1,7 @@
 == master
 
 Add :attr option
+Add :default option
 
 == v.1.0.6
 
